diseño de imagenes

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <img src="img/logo.jpg" > </img>
     </div>
 
-    <div class="men">
+    <div >
         <nav>
-            <a href="">Menu</a>
-            <a href="">Galeria</a>
-            <a href="">contacto</a>              
+            <a href="#menu">Menu</a>
+            <a href="#galeria">Galeria</a>
+            <a href="#contacto">contacto</a>              
         </nav>
     </div>
 
@@ -31,7 +31,7 @@
             La gastronomía mexicana es el conjunto de platillos y técnicas culinarias de México que forman parte de las tradiciones y vida común de sus habitantes, enriquecida por las aportaciones de las distintas regiones del país, que deriva de la experiencia del México prehispánico con la cocina europea, entre otras. </p>
     </section>
     <section>
-        <h2>menu de los ricos platillos</h2>
+        <h2 id="menu">menu de los ricos platillos</h2>
         <div>
             <img src="img/menu.jpeg"></img>
         </div>
@@ -49,34 +49,36 @@
         </ul>
     </section>
     <section>
-        <h2>Galeria</h2>
-        <div>
-            <img src="img/enchiladas.jpg"></img>
-            <img src="img/tacdorados.jpg"></img>
-            <img src="img/mole.jpg"></img>
-            <img src="img/pozole.jpg"></img>
-            <img src="img/quesadillas.jpg"></img>
-            <img src="img/sopes.jpg"></img>
-            <img src="img/tamales.jpg"></img>
-            <img src="img/chiles.jpg"></img>
-            <img src="img/gorditas.jpg"></img>
-            <img src="img/huaraches.jpg"></img>
+        <h2 id="galeria">Galeria</h2>
+        <div class="gale">
+            <img class="g1" src="img/enchiladas.jpg"></img>
+            <img class="g2" src="img/tacdorados.jpg"></img>
+            <img class="g3" src="img/mole.jpg"></img>
+            <img class="g4" src="img/huaraches.jpg"></img>
+            <img class="g5" src="img/quesadillas.jpg"></img>
+            <img class="g6" src="img/sopes.jpg"></img>
+            <img class="g7" src="img/tamales.jpg"></img>
+            <img class="g8" src="img/chiles.jpg"></img>
+            <img class="g9" src="img/gorditas.jpg"></img>
+            <img class="g10" src="img/pozole.jpg"></img>
+
+            
          
         </div>
     </section>
 </main>
-<footer>
+<footer id="contacto">
     <div>
         <img src="img/logo.jpg"></img>
     </div>
     <ul>
-        <li>contactanos </li>
+        <li>CONTACTANOS </li>
         <li>55-555-555-55</li>
         <li>Santa marta acatitla s/n</li>
         <li>elagua@restaurante.com</li>
     </ul>
     <ul>
-        <li>nuestras redes sociales </li>
+        <li>REDES SOCIALES  </li>
         <li>facebook</li>
         <li>twiter</li>
         <li>instagram</li>
